--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mydb?serverTimezone=UTC&create
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+server.error.whitelabel.enabled=false
 # Hibernate ddl auto (create, create-drop, update, none)
 spring.jpa.hibernate.ddl-auto=update
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
